# Workspace_Windows

./: .gitignore  .gitmodules  00_replace_pattern.pie  01_Copy_PROJECT.batman  02_Clean_PROJECT.pie  README.md  b_git_branch_main.sh  b_git_pull.sh
TimeMachine/202403201000AM_vEcu_iSolarV12.00.00_MinGwV06.03.00_NxpS32K146_GrenE_Tpms_FAILED/: EcucValueCollection_Generated.arxml
TimeMachine/202403201000AM_vEcu_iSolarV12.00.00_MinGwV06.03.00_NxpS32K146_GrenE_Tpms_FAILED/01_SwcApplTpms/: Config_System.arxml
TimeMachine/202403201000AM_vEcu_iSolarV12.00.00_MinGwV06.03.00_NxpS32K146_GrenE_Tpms_FAILED/02_common/: ConfigSystem_BSWMD_CUCEL_CompuMethods_rba.arxml
TimeMachine/202403201000AM_vEcu_iSolarV12.00.00_MinGwV06.03.00_NxpS32K146_GrenE_Tpms_FAILED/05_SwcService_ETASiSolarRtaCar12.2.0/: ConfigEcu_ParamDefEcuc_SwcServiceCsm.arxml  ConfigEcu_ParamDefEcuc_SwcServiceDem.arxml  ConfigEcu_ParamDefEcuc_SwcServiceNmFr.arxml
TimeMachine/202403201000AM_vEcu_iSolarV12.00.00_MinGwV06.03.00_NxpS32K146_GrenE_Tpms_FAILED/06_EcuAb_E6.1/: ConfigEcu_ParamDefEcuc_EcuabTrcvEth.arxml
TimeMachine/202403201000AM_vEcu_iSolarV12.00.00_MinGwV06.03.00_NxpS32K146_GrenE_Tpms_FAILED/07_Mcal_NxpS32K146/: ConfigEcu_ParamDefEcuc_McalDio.arxml
TimeMachine/202403201000AM_vEcu_iSolarV12.00.00_MinGwV06.03.00_NxpS32K146_GrenE_Tpms_FAILED/_ToBeDeleted_ConfigEcu/: ConfigEcu_ParamDefEcuc_ComUser.arxml  ConfigEcu_ParamDefEcuc_Emm_rba.arxml  (+2 more)
TimeMachine/202403201048AM_Confluence01_SwcApplConfiguration_01_CreateNewProjectFromScratch/: EcucValueCollection_Generated.arxml
TimeMachine/202403220832AM_Confluence03_EcuConfiguration_05_ConfigureAndGenerateBsw_01_GenerateEcuc_PASSED/: algo.properties.template
TimeMachine/202403261324PM_Confluence_ConfGenConfigurationCanTp_BswGenFAILED/: NamingConventionRule.xml
Workspace_ETAS_RTA_CAR_12.2.0/.metadata/: version.ini
Workspace_ETAS_RTA_CAR_12.2.0/vEcu_iSolarV12.00.00_MinGwV06.03.00_NxpS32K146_GrenE_Tpms/: EcucValueCollection_Generated.arxml
_doc/: AUTOSAR_Methodology_ETAS.xlsx  Activities.xlsx  Architecture.xlsx
modules/zServiceEcuM/: README.md
modules/zServiceOs/: README.md
repo_modules/CddBdrv/: README.md
repo_modules/EcuabCryIf/: README.md
repo_modules/EcuabEa/: README.md
repo_modules/EcuabEthIf/: README.md
repo_modules/EcuabFee/: README.md
repo_modules/EcuabFrIf/: README.md
repo_modules/EcuabFrTp/: README.md
repo_modules/EcuabJ1939Tp/: README.md
repo_modules/EcuabLinIf/: README.md
repo_modules/EcuabMemIf/: README.md
repo_modules/EcuabWdgIf/: README.md
repo_modules/McalAdc/: README.md
repo_modules/McalCan/: README.md
repo_modules/McalDio/: README.md
repo_modules/McalEep/: README.md
repo_modules/McalEth/: README.md
repo_modules/McalFr/: README.md
repo_modules/McalIcu/: README.md
repo_modules/McalLin/: README.md
repo_modules/McalMcu/: README.md
repo_modules/McalOcu/: README.md
repo_modules/McalPort/: README.md
repo_modules/McalPwm/: README.md
repo_modules/McalSpi/: README.md
repo_modules/McalWdg/: README.md
repo_modules/ProjectARA/: README.md
repo_modules/ProjectCfg/: README.md
repo_modules/ProjectCompiler/: README.md
repo_modules/ProjectConst/: README.md
repo_modules/ReSimCmd/: README.md
repo_modules/ReSimFm/: README.md
repo_modules/SwcServiceBswM/: README.md
repo_modules/SwcServiceCanTp/: README.md
repo_modules/SwcServiceCom/: README.md
repo_modules/SwcServiceComM/: README.md
repo_modules/SwcServiceCsm/: README.md
repo_modules/SwcServiceDcm/: README.md
repo_modules/SwcServiceDet/: README.md
repo_modules/SwcServiceEcuM/: README.md
repo_modules/SwcServiceFiM/: README.md
repo_modules/SwcServiceFrNm/: README.md
repo_modules/SwcServiceIoHwAb/: README.md
repo_modules/SwcServiceNvM/: README.md
repo_modules/SwcServiceOs/: README.md
repo_modules/SwcServicePduR/: README.md
repo_modules/SwcServiceSchM/: README.md
repo_modules/SwcServiceSokFm/: README.md
repo_modules/SwcServiceStartUp/: README.md
repo_modules/SwcServiceVkms/: README.md
repo_modules/SwcServiceWdgM/: README.md
repo_modules/common/: README.md
repo_projects/ProjectWindows_Cygwin64_VirtualECUintelCOREi7/: README.md
repo_projects/ProjectWindows_Eclipse_VirtualECUintelCOREi7/: .gitignore  README.md
repo_projects/pEcuReSim/cR_LATEST/: CMakeLists.txt
repo_projects/pEcuReSim/cR_LATEST/source/: EcuabCanIf  EcuabCanTrcv  EcuabFee  EcuabMemIf  McalAdc  McalCan  McalDio  McalFls  McalGpt  McalLin  McalMcu  McalWdg  ProjectARA  ProjectCfg  ProjectCompiler  SwcApplDcm  SwcApplDem  SwcApplEcuM  SwcApplNvM  SwcApplTpms  SwcServiceBswM  SwcServiceCanSm  SwcServiceCanTp  SwcServiceCom  SwcServiceComM  SwcServiceDcm  SwcServiceDem  SwcServiceDet  SwcServiceEcuM  SwcServiceFiM  SwcServiceNvM  SwcServiceOs  SwcServicePduR  SwcServiceSchM  SwcServiceStartUp  common  wrappers
repo_projects/pIntegrationRdcXnf/cB_LATEST/: CMakeLists.txt
repo_projects/pIntegrationRdcXnf/cB_LATEST/source/: .cproject  .project
repo_projects/pIntegrationRdcXnf/cB_LATEST/source/RDCi_wrapper/: rdci_context_handling.hpp  rdci_diag_data.hpp  rdci_interface.hpp
repo_projects/pIntegrationRdcXnf/cB_LATEST/source/SwcApplTpms/: SwcApplTpms.cpp
repo_projects/pIntegrationRdcXnf/cB_LATEST/source/common/: CfgProject.hpp  Compiler.hpp  Compiler_Cfg.hpp  Platform_Types.hpp  Std_Types.hpp  Template.hpp
repo_projects/pIntegrationRdcXnf/cB_LATEST/source/stubs/: Dtms_control.hpp  Dtms_provider.hpp  Dtms_types.hpp  Rdci_MemMap.hpp  Rte_Rdci.hpp  Rte_Rdci_Type.hpp  stubs.cpp
repo_submodules/: b_git_RmSoftLink.sh  b_git_SubmoduleAdd.sh
repo_submodules/Wrapper_HBG/: ReadMe.txt
repo_tools/CleanCode/: execute_CleanCode_202308090900AM.sh  execute_CleanCode_202308100930AM.sh  execute_CleanCode_202308111200AM.sh  execute_CleanCode_202308141200AM.sh
repo_tools/GNU/: Readme.txt
repo_tools/HexView/: disclaimer.txt  license.liz  random.hex
repo_tools/execute_CleanCode_202308040830AM/: CleanProject.sh
repo_tools/template_CleanCode_Audi/: 00_remove_comments.pie  Batch.pie
repo_tools/template_CleanCode_BMW/: execute_CleanCode_202310222200PM.sh
(+2471 files in other folders)
